// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search > search of 'meta' > with a filter 1`] = `
[
  "meta",
]
`;

exports[`Search > search of 'meta' > with a filter that has no value 1`] = `
[
  "meta",
]
`;

exports[`Search > search of 'meta' > with multiple filters of same type 1`] = `
[
  "meta",
  "leva",
  "mvra",
  "mehd",
  "mstv",
  "ipma",
  "schm",
  "xml ",
  "csch",
  "pitm",
  "uriI",
  "iinf",
  "csgp",
  "stz2",
  "txtC",
  "saio",
  "saiz",
  "mvhd",
  "infe",
  "mfhd",
  "tfhd",
  "trun",
  "mdhd",
  "sthd",
  "tfdt",
  "tfra",
  "stco",
  "dref",
  "mfro",
  "tkhd",
  "hmhd",
  "nmhd",
  "stss",
  "smhd",
  "vmhd",
  "stts",
]
`;

exports[`Search > search of 'meta' > without any filters 1`] = `
[
  "meta",
]
`;

exports[`Search > search with container filter > #SampleEntry > '' 1`] = `
[
  "auxi",
  "btrt",
  "ccst",
  "csch",
  "free",
  "frma",
  "rinf",
  "schi",
  "schm",
  "scrb",
  "seii",
  "sinf",
  "skip",
  "stvi",
  "uuid",
]
`;

exports[`Search > search with container filter > $avcC > '' 1`] = `
[
  "free",
  "skip",
  "uuid",
]
`;

exports[`Search > search with container filter > $file > $meta > 'idat' 1`] = `
[
  "idat",
]
`;

exports[`Search > search with container filter > $moov > $meta > 'xml' 1`] = `
[
  "xml ",
  "bxml",
]
`;

exports[`Search > search with container filter > (exact) $file > $moov > 'trak' 1`] = `
[
  "trak",
]
`;

exports[`Search > search with container filter > (exact) $moov > $trak > $meta > 'hdlr' 1`] = `
[
  "hdlr",
]
`;

exports[`Search > search with container filter > (exact) $moov > '' TBD 1`] = `
[
  "free",
  "meta",
  "mvex",
  "mvhd",
  "skip",
  "trak",
  "udta",
  "uuid",
]
`;

exports[`Search > search with container filter > (exact) $trak > '' 1`] = `
[
  "edts",
  "free",
  "mdia",
  "meta",
  "skip",
  "tkhd",
  "tref",
  "trgr",
  "ttyp",
  "udta",
  "uuid",
]
`;

exports[`Search > search with container filter > caches previous calculations 1`] = `
[
  "3dpr",
  "a3d1",
  "a3d2",
  "a3d3",
  "a3d4",
  "a3dC",
  "acgl",
  "adda",
  "adrc",
  "aebr",
  "aebr",
  "aebr",
  "afbr",
  "afbr",
  "afbr",
  "albc",
  "alou",
  "alst",
  "alte",
  "altr",
  "altt",
  "amgl",
  "assp",
  "aud ",
  "auxC",
  "auxi",
  "auxl",
  "auxl",
  "avc1",
  "avc1",
  "avc2",
  "avc2",
  "avc3",
  "avc3",
  "avc4",
  "avc4",
  "avcC",
  "avcC",
  "avcp",
  "avcp",
  "avll",
  "avss",
  "base",
  "brnd",
  "brst",
  "btrt",
  "buff",
  "bxml",
  "cclv",
  "cclv",
  "ccst",
  "cdsc",
  "chnl",
  "cinf",
  "clap",
  "clap",
  "clli",
  "clli",
  "co64",
  "colr",
  "colr",
  "cprt",
  "crtt",
  "csch",
  "csgp",
  "cslg",
  "cstg",
  "ctts",
  "dcfi",
  "deps",
  "dimg",
  "dimm",
  "dinf",
  "dmax",
  "dmed",
  "dmix",
  "dobr",
  "dobr",
  "dobr",
  "dpnd",
  "drap",
  "dref",
  "drep",
  "dtrt",
  "edts",
  "elng",
  "elst",
  "enc3",
  "enca",
  "enca",
  "encf",
  "encm",
  "encp",
  "encs",
  "enct",
  "encu",
  "encv",
  "eob ",
  "eos ",
  "eqiv",
  "eqiv",
  "etyp",
  "evcr",
  "exbl",
  "favc",
  "fdel",
  "fdel",
  "fdp ",
  "fecr",
  "fiin",
  "fire",
  "fobr",
  "fobr",
  "fobr",
  "font",
  "fpar",
  "free",
  "frma",
  "gitn",
  "grid",
  "grpl",
  "hdlr",
  "hev1",
  "hev1",
  "hev2",
  "hev2",
  "hev3",
  "hev3",
  "hind",
  "hinf",
  "hint",
  "hmhd",
  "hnti",
  "hvc1",
  "hvc1",
  "hvc2",
  "hvc2",
  "hvc3",
  "hvc3",
  "hvcC",
  "hvcC",
  "iaug",
  "icpv",
  "idat",
  "iinf",
  "iloc",
  "iloc",
  "imdt",
  "imir",
  "infe",
  "ipco",
  "ipma",
  "ipro",
  "iprp",
  "iref",
  "iroi",
  "irot",
  "iscl",
  "ispe",
  "jpgC",
  "kind",
  "lbli",
  "ldep",
  "leva",
  "lhe1",
  "lhv1",
  "lhvC",
  "lhvC",
  "linf",
  "lsel",
  "ludt",
  "maxr",
  "md5i",
  "mdcv",
  "mdcv",
  "mdft",
  "mdhd",
  "mdia",
  "mebx",
  "mehd",
  "meta",
  "mett",
  "metx",
  "minf",
  "minp",
  "mixn",
  "msrc",
  "mstv",
  "mvc1",
  "mvc2",
  "mvc3",
  "mvc4",
  "mvcC",
  "mvcg",
  "mvci",
  "mvd1",
  "mvd2",
  "mvd3",
  "mvd4",
  "mvdC",
  "mvex",
  "mvhd",
  "mvif",
  "mvra",
  "nalm",
  "nmhd",
  "npck",
  "nump",
  "oinf",
  "oinf",
  "opeg",
  "opth",
  "oref",
  "padb",
  "paen",
  "pano",
  "pano",
  "pano",
  "pase",
  "pasp",
  "pasp",
  "payt",
  "pitm",
  "pixi",
  "pm2t",
  "pmax",
  "pred",
  "prol",
  "prtp",
  "pss1",
  "rap ",
  "rash",
  "recr",
  "refs",
  "res3",
  "resa",
  "resa",
  "resf",
  "resm",
  "resp",
  "ress",
  "rest",
  "resu",
  "resv",
  "rinf",
  "rloc",
  "rm2t",
  "roll",
  "rref",
  "rrgn",
  "rror",
  "rrtp",
  "rsrp",
  "rssr",
  "rtcp",
  "rtp ",
  "rtp ",
  "sabt",
  "saio",
  "saiz",
  "sap ",
  "sbas",
  "sbgp",
  "sbtt",
  "scal",
  "schi",
  "schm",
  "scif",
  "scnm",
  "scrb",
  "sdep",
  "sdp ",
  "sdtp",
  "segr",
  "seii",
  "sgpd",
  "sinf",
  "skip",
  "sm2t",
  "smhd",
  "snim",
  "snro",
  "snut",
  "spid",
  "spli",
  "spor",
  "srat",
  "srpp",
  "srtp",
  "sstl",
  "stbl",
  "stco",
  "stcp",
  "stdp",
  "ster",
  "ster",
  "sthd",
  "stmg",
  "stmi",
  "stpp",
  "strd",
  "stri",
  "strk",
  "stsa",
  "stsc",
  "stsd",
  "stsg",
  "stsh",
  "stss",
  "stsz",
  "stti",
  "stts",
  "stvi",
  "stxt",
  "stz2",
  "subp",
  "subs",
  "subs",
  "subt",
  "sulm",
  "svdr",
  "svip",
  "svpr",
  "swfr",
  "swtc",
  "swtk",
  "swto",
  "sync",
  "tbas",
  "tbas",
  "tele",
  "thmb",
  "thmb",
  "tibr",
  "tims",
  "tiri",
  "tkhd",
  "tlou",
  "tmax",
  "tmin",
  "tols",
  "totl",
  "tpay",
  "tpyl",
  "trak",
  "tran",
  "tref",
  "trep",
  "trex",
  "trgr",
  "trif",
  "trpy",
  "tsas",
  "tscl",
  "tsel",
  "tsro",
  "tssy",
  "tstb",
  "tsyn",
  "ttyp",
  "txtC",
  "tyco",
  "udes",
  "udta",
  "uriI",
  "urim",
  "url ",
  "urn ",
  "uuid",
  "vdep",
  "vipr",
  "vlab",
  "vmhd",
  "vopi",
  "vplx",
  "vref",
  "vreg",
  "vttC",
  "vvcN",
  "vvcb",
  "vwdi",
  "vwid",
  "wbbr",
  "wbbr",
  "wbbr",
  "wvtt",
  "xml ",
]
`;
